--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Steev Kundukulangara # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: My views, tricks, ideas # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
@@ -34,16 +34,21 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Steev Kundukulangara
+  email: sk@stevekundukulangara.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/username # change to your GitHub homepage
+    - https://twitter.com/steevkundukulangara # change to your Twitter homepage
+    - https://github.com/kstevejose
+    - https://linkedin.com/steev-kundukulangara # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
 
+favicon: /assets/lib/favicon.ico # the favicon of the site, it will be used in the browser tab and bookmark
+
+
+avatar: /assets/lib/personal.jpg    
 # Site Verification Settings
 webmaster_verifications:
   google: # fill in your Google verification code
@@ -98,7 +103,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
