--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ webmaster_verifications:
 # Web Analytics Settings
 analytics:
   google:
-    id: # fill in your Google Analytics ID
+    id: G-CMW02Z5CKY
   goatcounter:
     id: # fill in your GoatCounter ID
   umami:
