modified config file for seo

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: Steev Kundukulangara # the main title
 tagline: My views, tricks, ideas # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Steve — Senior Technical Writer on a mission to grow with 100,000+ writers through bold, visual storytelling. Explore AI-powered docs, Docs-as-Code workflows, OpenAPI tutorials, and modern technical writing insights that blend clarity, minimalism, and creativity.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
